--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <video autoplay loop muted>
+    <video autoplay="autoplay" loop muted>
         <source src="./Divya Prasan 15th july.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
